--- a/classification/Classification.ipynb
+++ b/classification/Classification.ipynb
@@ -4,8 +4,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Klasifikace"
+    "# Machine learning\n",
+    "## Supervised learning\n",
+    "## Unsupervised learning\n",
+    "\n",
+    "# Klasifikace a její algoritmy\n",
+    "Binary classification, Multi-classification, Multi-label\n",
+    "Sentimentální analýza, Email Spam, třídění dokumentů podle jejich obsahu, klasifikace obrázků\n",
+    "## Logistická Regrese\n",
+    "Logistická regerese by měla být použita pouze tehdy, pokud cílové proměnné spadají do diskrétních kategorií.\n",
+    "Situace kdy využít logistickou regresi: \n",
+    "    * Predikování jestli je email spam nebo ne\n",
+    "    * Jestli je nádor zhoubná nebo ne\n",
+    "    * Jestli je houba jedná nebo jedovatá\n",
+    "    * Sentimentální analýza\n",
+    "    \n",
+    "## K-nearst Neighbours (K-NN)\n",
+    "\n",
+    "## Suport Vector Machine (SVM)\n",
+    "\n",
+    "## Naive Bayes\n",
+    "\n",
+    "## Decision Tree Classification\n",
+    "\n",
+    "## Random Forest Classification\n",
+    "    \n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
