--- a/classification/Classification.ipynb
+++ b/classification/Classification.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Machine learning\n",
     "## Supervised learning\n",
+    "Classification, Regression\n",
     "## Unsupervised learning\n",
+    "Clustering, Association\n",
     "\n",
     "# Klasifikace a její algoritmy\n",
     "Binary classification, Multi-classification, Multi-label\n",
