Machine learning definice

--- a/classification/Classification.ipynb
+++ b/classification/Classification.ipynb
@@ -5,33 +5,41 @@
    "metadata": {},
    "source": [
     "# Machine learning\n",
+    "***Definice:*** Machine Learning je aplikace Umělé Inteligence, která umožňuje se neustále učit a zlepšovat ze zkušeností, aniž by byly explicitně naprogramované. Machine Learning se zaměřuje na vývoj počítačových programů, které mohou přistoupit k datům, učit se znich a používat je pro vlastní účely. Hlavním cílem je umožnit počítačům se neustále učit, aniž by bylo potřeba lidského zásahu nebo asistence a podle toho pak upravovat své jednání.\n",
+    "\n",
+    "<img src=\"resources/learning.jpeg\">\n",
+    "\n",
+    "***Proces učení začíná u dat, ve kterých se snažíme hledat vzory.***\n",
+    "\n",
+    "Machine Learning lze rozdělit do několika kategorií:\n",
+    "- **Supervised learning**\n",
+    "- **Unsupervised learning**\n",
+    "- **Reinforcment learning**\n",
+    "\n",
+    "<img src=\"resources/machine_learning_kinds_and_using.png\">\n",
+    "\n",
     "## Supervised learning\n",
-    "Classification, Regression\n",
-    "## Unsupervised learning\n",
-    "Clustering, Association\n",
+    "Classification vs. Regression\n",
+    "## Unsupervis\n",
+    "ed learning\n",
+    "Classification vs. Clustering. \n",
+    "(Classification vs. Association)\n",
+    "## Reinforcement Learning\n",
+    "\n",
+    "## Machine learning vs. Deep learning\n",
     "\n",
     "# Klasifikace a její algoritmy\n",
-    "Binary classification, Multi-classification, Multi-label\n",
-    "Sentimentální analýza, Email Spam, třídění dokumentů podle jejich obsahu, klasifikace obrázků\n",
+    "Binary classification, Multi-classification, Multi-label.\n",
+    "Příklady použití klasifikace\n",
     "## Logistická Regrese\n",
-    "Logistická regerese by měla být použita pouze tehdy, pokud cílové proměnné spadají do diskrétních kategorií.\n",
-    "Situace kdy využít logistickou regresi: \n",
-    "    * Predikování jestli je email spam nebo ne\n",
-    "    * Jestli je nádor zhoubná nebo ne\n",
-    "    * Jestli je houba jedná nebo jedovatá\n",
-    "    * Sentimentální analýza\n",
-    "    \n",
+    "U každého algoritmu bude teoretické a matematické vysvětlení a nějaký jednoduchý příklad v pythonu. Pokud je to složitý alg. tak jenom obecně vysvětlit.\n",
     "## K-nearst Neighbours (K-NN)\n",
-    "\n",
     "## Suport Vector Machine (SVM)\n",
-    "\n",
     "## Naive Bayes\n",
-    "\n",
     "## Decision Tree Classification\n",
-    "\n",
     "## Random Forest Classification\n",
-    "    \n",
-    "    "
+    "# Příklad\n",
+    "Pokud to pujde dobře, tak můžeme dát nějaký složitější příklad.\n"
    ]
   },
   {
